Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION: responsive column wrap

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2419,7 +2419,7 @@ and also iPads specifically.
 	column-count: 2;
 	}
 	ol.flow-manyislandgroups {
-	height: 4500px;
+	height: 5200px;
 	column-count: 3;
 	}
 
